maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:37: error: reassignment to val
    i =i+1
      ^Escaper:40: error: reassignment to val
    i= i-1
     ^